--- a/front-end/secao-01-Introdução-ao-Frontend-e-JS-assícrono/dia-01-Ambiente-de-desenvolvimento/package.json
+++ b/front-end/secao-01-Introdução-ao-Frontend-e-JS-assícrono/dia-01-Ambiente-de-desenvolvimento/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "vite": "^4.3.9"
   },
   "type": "module"
 }
