--- a/front-end/secao-01-Introdução-ao-Frontend-e-JS-assícrono/dia-01-Ambiente-de-desenvolvimento/package.json
+++ b/front-end/secao-01-Introdução-ao-Frontend-e-JS-assícrono/dia-01-Ambiente-de-desenvolvimento/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trybe/eslint-config-frontend": "^1.11.3",
     "nanoid": "^4.0.2",
     "vite": "^4.3.9"
   },
