--- a/front-end/secao-01-Introdução-ao-Frontend-e-JS-assícrono/dia-01-Ambiente-de-desenvolvimento/package.json
+++ b/front-end/secao-01-Introdução-ao-Frontend-e-JS-assícrono/dia-01-Ambiente-de-desenvolvimento/package.json
@@ -2,7 +2,7 @@
   "name": "dia-01-ambiente-de-desenvolvimento",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "dev": "vite --open",
     "lint": "eslint ./src"
