--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@trybe/eslint-config-frontend": "^1.11.3",
     "validator": "^13.9.0",
     "vite": "^4.3.9"
   },
@@ -9,7 +10,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite --open",
+    "lint": "eslint .",
   },
   "keywords": [],
   "author": "",
