--- a/front-end/exercicio1.1/package.json
+++ b/front-end/exercicio1.1/package.json
@@ -9,11 +9,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
-}
-{
+  "license": "ISC",
+
   "dependencies": {
     "validator": "^13.9.0",
-    "vite": "^4.3.9"
-  }
+    "vite": "^4.3.9",
+    "@trybe/eslint-config-frontend": "^1.11.3"
+    }
+  
 }
+
+  
+
